crates/crypto/src/types/snapshots/crypto__types__test__snapshot_backup_decryption_key-2.snap
---
source: crates/crypto/src/types/mod.rs
expression: decryption_key
---
BackupDecryptionKey(
    "...",
)
