crates/crypto/src/types/snapshots/crypto__types__test__snapshot_backup_decryption_key.snap
---
source: crates/crypto/src/types/mod.rs
expression: "BackupDecryptionKey { inner: Box::new([1u8;32]) }"
---
[
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1,
  1
]
