crates/crypto/src/types/snapshots/crypto__types__test__snapshot_secret_bundle-2.snap
---
source: crates/crypto/src/types/mod.rs
expression: secret_bundle
---
{
  "cross_signing": {
    "master_key": "MSKMSKMSKMSKMSKMSKMSKMSKMSKMSKMSKMSK",
    "user_signing_key": "USKUSKUSKUSKUSKUSKUSKUSKUSKUSKUSKUSK",
    "self_signing_key": "SSKSSKSSKSSKSSKSSKSSKSSKSSKSSKSSK"
  },
  "backup": null
}
